# ai-sre-new

./: .env.example  .gitignore  .gitmodules  DECISIONS.md  PROJECT.md  README.md  ROADMAP.md  outline.md  pyproject.toml  research-report.md
apps/api/tests/: test_main.py  test_phase6_integration.py
apps/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js
apps/frontend/src/: App.tsx  api.ts  components.tsx  lib.ts  mockData.ts  styles.css
apps/worker/tests/: test_graph.py  test_worker_main.py
docs/: DEMO.md  RESUME_BULLETS.md
infra/: README.md
infra/alertmanager/: alertmanager.yml
infra/docker/: docker-compose.yml
infra/grafana/dashboards/: phase0-otel-demo.json
infra/otel-demo/: .env.demo  compose.glassbox.yml  glassbox.env  otelcol-config-glassbox.yml
infra/prometheus/: prometheus-config.yaml
infra/prometheus/rules/: otel-demo-alerts.yml
runbooks/otel-demo/: cart-checkout-errors.md  checkout-payment-failure.md  frontend-ad-failure.md  image-load-errors.md  kafka-queue-errors.md  product-catalog-errors.md  recommendation-errors.md  shipping-rate-errors.md
scenarios/benchmark/cart-benign-cookie-cleanup/: change.md
scenarios/benchmark/cart-checkout-failure/: alertmanager_webhook.json  bad-change.md  deploy_history.json  scenario.json  world_snapshot.json
scenarios/benchmark/cart-price-staleness/: alertmanager_webhook.json  bad-change.md  deploy_history.json  scenario.json  world_snapshot.json
scenarios/benchmark/checkout-payment-decline-spike/: alertmanager_webhook.json  bad-change.md  deploy_history.json  scenario.json  world_snapshot.json
scenarios/otel-demo/: deploy-history.json
(+90 files in other folders)
